# msccl-tools

./: .gitignore  docs.md  flake.nix  pyproject.toml  run_tests.sh  setup_leonardo.sh  shell.nix  tests copy.txt  tests.txt
examples/mscclang/: 1allreduce_latency_optimal_swing.py  2allreduce_bandwidth_optimal_swing.py  allreduce_1step.py  allreduce_swing_bandwidth_all_sends.py  allreduce_swing_bandwidth_at_once.py  allreduce_swing_latency_optimal.py  allreduce_swing_latency_sync.py  swing_latency.xml
examples/mscclang/simple/: allreduce_ring_log.py
msccl/language/: __init__.py  rank_dag.py
