[tool.poetry]
name = "msccl-tools"
version = "0.1.0"
description = "mscclang"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
z3-solver = "^4.13.0.0"
argcomplete = "^3.5.0"
lxml = "^5.3.0"
humanfriendly = "^10.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
